--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "description": "Translate Flutter ARB files using Gemini API",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "ncc build index.js -o dist"
+  },
   "dependencies": {
     "axios": "^1.13.4",
     "node-fetch": "^3.3.2"
